scatter plot finished

--- a/index.html
+++ b/index.html
@@ -97,8 +97,20 @@
 <p>Looking at the electoral history of individual seats, more interesting trends emerge. Take the rural-urban divide in 2012. Data shows that the BJP completely dominated the urban constituencies, whereas in rural areas, the state witnessed more of a contest.</p>
 </section>
 <div id="scatter-plot">
-    
+<h2 class="chart-title">While BJP dominates the urban seats, there is a tough fight in rural Gujarat</h2>
+<p class="chart-subhed">Vote share (%) of the dominant party v/s population living in rural areas (%) in 2012</p>  
+<div class="legend-container">
+    <div class="legend-labels">
+        <div class="label-box" style="background-color: orange"></div>
+        BJP
+    </div>
+    <div class="legend-labels">
+        <div class="label-box" style="background-color: steelblue"></div>
+        Congress
+    </div>
+</div>    
 </div>
+<p class="chart-source copy" style="padding: 1em 0;">Source: How India Lives; Jensenius, F.,Verniers, G. Indian State Assembly Election and Candidates Data(2012); HT Analysis; Election Commission of India; Indian Census (2011)</p>
 <section class="copy">
 <p>In 50 of the 56 seats (90% of all seats) in which more than half the population lives in urban areas, the BJP had a higher vote share than the Congress.</p>
 
