--- a/index.html
+++ b/index.html
@@ -4,33 +4,33 @@
     <meta http-equiv="X-UA-Compatible" content="IE=Edge;chrome=1">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta name="viewport" content="width=device-width">
-    <title>This is a headline | Hindustan Times</title>
+    <title>Four charts that show the variation in how constituencies vote in Gujarat | Hindustan Times</title>
     <!-- google fonts -->
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700|PT+Serif:400,400i,700" rel="stylesheet">
     <!-- stylesheets -->
     <link rel="stylesheet" type="text/css" href="//maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" type="text/css" href="css/styles.css?v2">
-    <meta name="keywords" content="Gujarat elections, BJP, BJP in Gujarat, Gujarat election results, Gujarat winning margin, Gujarat assembly elections" />
-    <meta name="description" content="This is a subhed" />
+    <link rel="stylesheet" type="text/css" href="css/styles.css?v3">
+    <meta name="keywords" content="Bellwether seats in gujarat, anti-incumbency in gujarat, Gujarat elections, BJP, BJP in Gujarat, Gujarat election results, Gujarat winning margin, Gujarat assembly elections" />
+    <meta name="description" content="Five seats near Surat have chosen a candidate from the ruling government." />
 
     <link rel="canonical" content="http://www.hindustantimes.com/interactives/gujarat-elections-2017-anti-incumbency-bellwether-analysis/" />
 
     <!-- facebook -->
     <meta property="og:site_name" content="Hindustan Times" />
     <meta property="og:type" content="article" />
-    <meta property="og:title" content="This is a headline" />
+    <meta property="og:title" content="Four charts that show the variation in how constituencies vote in Gujarat" />
     <meta property="og:url" content="http://www.hindustantimes.com/interactives/gujarat-elections-2017-anti-incumbency-bellwether-analysis/" />
-    <meta property="og:image" content="http://www.hindustantimes.com/interactives/gujarat-elections-2017-anti-incumbency-bellwether-analysis//img/social.png" />
-    <meta property="og:description" content="This is a subhed" />
-    <meta property="og:image:type" content="image/png" />
+    <meta property="og:image" content="http://www.hindustantimes.com/interactives/gujarat-elections-2017-anti-incumbency-bellwether-analysis//img/social.jpg" />
+    <meta property="og:description" content="Five seats near Surat have chosen a candidate from the ruling government." />
+    <meta property="og:image:type" content="image/jpeg" />
     <meta property="og:type" content="website" />
 
     <!-- twitter -->
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@htTweets" />
-    <meta name="twitter:title" content="This is a headline" />
-    <meta name="twitter:description" content="This is a subhed" />
-    <meta name="twitter:image:src" content="http://www.hindustantimes.com/interactives/gujarat-elections-2017-anti-incumbency-bellwether-analysis//img/social.png" />
+    <meta name="twitter:title" content="Four charts that show the variation in how constituencies vote in Gujarat" />
+    <meta name="twitter:description" content="Five seats near Surat have chosen a candidate from the ruling government." />
+    <meta name="twitter:image:src" content="http://www.hindustantimes.com/interactives/gujarat-elections-2017-anti-incumbency-bellwether-analysis//img/social.jpg" />
     <!-- Google Tag Manager -->
     <script>dataLayer=[{"section":"interactives"}];</script>
     <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push(
@@ -51,26 +51,23 @@
         <a href="http://www.hindustantimes.com"><img class="nav-logo desktop" src="http://www.hindustantimes.com/static/common/logos/logo-desktop.png"></a>
         <div class="right-container">
         <a href="https://www.facebook.com/sharer/sharer.php?u=http://www.hindustantimes.com/interactives/gujarat-elections-2017-anti-incumbency-bellwether-analysis/" target="_blank"><i class="fa fa-facebook social-button" aria-hidden="true"></i></a>
-        <a href="http://twitter.com/intent/tweet?url=http://www.hindustantimes.com/interactives/gujarat-elections-2017-anti-incumbency-bellwether-analysis/&amp;text=This is a headline&amp;via=httweets" target="_blank"><i class="fa fa-twitter social-button" aria-hidden="true"></i></a>
+        <a href="http://twitter.com/intent/tweet?url=http://www.hindustantimes.com/interactives/gujarat-elections-2017-anti-incumbency-bellwether-analysis/&amp;text=Four charts that show the variation in how constituencies vote in Gujarat&amp;via=httweets" target="_blank"><i class="fa fa-twitter social-button" aria-hidden="true"></i></a>
         </div>
     </div>
     <div class = "story">
       <div class="headline-container">
         <h1 class="headline">
-             This is a headline
+             Four charts that show the variation in how constituencies vote in Gujarat
         </h1>
 
         <h3 class = "byline">
             By Gurman Bhatia and Samarth Bansal
             <hr class="line">
         </h3>
-       <!--  <h3 class = "byline dateline">
-            December 2, 2017
-        </h3> -->
-        <!-- <p class="tease">
-            With decreasing margins of victory, assembly elections in Gujarat are
-            becoming a close contest. 
-        </p> -->
+        <h3 class = "byline dateline">
+            December 8, 2017
+        </h3>
+        
         </div>
         
       <div class = 'copy-container'>
@@ -115,8 +112,25 @@
 <p>In 50 of the 56 seats (90% of all seats) in which more than half the population lives in urban areas, the BJP had a higher vote share than the Congress.</p>
 
 <p>However, in the 126 predominantly rural constituencies, the fight was tight: the Congress had a higher vote share than the BJP in 44% of the seats (55), while the BJP led in 56% of the seats (71).</p>
-
+<div class="locator">
+    <div  id = "strongholds" >
+<h2 class="chart-title">BJP has retained 35 constituencies ever since it came to power in 1995</h2>
+<p class="chart-subhed" style="margin-bottom: 0.5em;">Seats retained by BJP and Congress since 1995</p>
+<div class="legend-container" style="margin-bottom: 1em;">
+    <div class="legend-labels">
+        <div class="legend-boxes" style="width: 30px;background-color: orange"></div>
+        BJP
+    </div>
+    <div class="legend-labels">
+        <div class="legend-boxes" style="width: 30px;background-color: steelblue"></div>
+        Congress
+    </div>
+</div>
+</div>
+<p class="chart-source copy" style="padding: 1em 0;">Source: Jensenius, F.,Verniers, G. Indian State Assembly Election and Candidates Data(2012); HT Analysis; Election Commission of India</p>  
+</div>
 <p>For this analysis, we used assembly-level demographic data. <a href = "http://howindialives.com/">How India Lives</a>, a search engine for public data, mapped all 2011 census tehsils to constituencies in which they fall. In case of urban areas that were part of multiple seats, the constituencies were matched by village or ward data. Of the 19,000+ census areas, some 100 were left unmatched because of uncertainty.</p>
+
 
 <p>The BJP has won 35 seats – one-fifth of all constituencies – in every election since it first came to power in 1995. Twenty of these seats, including Prime Minister Narendra Modi’s pocket borough of Maninagar, are predominantly urban. Fifteen are rural.</p>
 
@@ -145,22 +159,22 @@
           </section>
 
 
-<div class="social-shares"><a href="https://www.facebook.com/sharer/sharer.php?u=http://www.hindustantimes.com/interactives/gujarat-elections-2017-anti-incumbency-bellwether-analysis/" target="_blank"><div class="facebook social"><i class="fa fa-facebook" aria-hidden="true"></i><span>share</span></div></a><a href="http://twitter.com/intent/tweet?url=http://www.hindustantimes.com/interactives/gujarat-elections-2017-anti-incumbency-bellwether-analysis/&amp;text=This is a headline&amp;via=httweets" target="_blank"><div class="twitter social"><i class="fa fa-twitter" aria-hidden="true"></i><span>tweet</span></div></a><a href="whatsapp://send?text=This is a headline http://www.hindustantimes.com/interactives/gujarat-elections-2017-anti-incumbency-bellwether-analysis/" data-action="share/whatsapp/share"><div class="whatsapp social"><i class="fa fa-whatsapp" aria-hidden="true"></i></div></a></div>
+<div class="social-shares"><a href="https://www.facebook.com/sharer/sharer.php?u=http://www.hindustantimes.com/interactives/gujarat-elections-2017-anti-incumbency-bellwether-analysis/" target="_blank"><div class="facebook social"><i class="fa fa-facebook" aria-hidden="true"></i><span>share</span></div></a><a href="http://twitter.com/intent/tweet?url=http://www.hindustantimes.com/interactives/gujarat-elections-2017-anti-incumbency-bellwether-analysis/&amp;text=Four charts that show the variation in how constituencies vote in Gujarat&amp;via=httweets" target="_blank"><div class="twitter social"><i class="fa fa-twitter" aria-hidden="true"></i><span>tweet</span></div></a><a href="whatsapp://send?text=Four charts that show the variation in how constituencies vote in Gujarat http://www.hindustantimes.com/interactives/gujarat-elections-2017-anti-incumbency-bellwether-analysis/" data-action="share/whatsapp/share"><div class="whatsapp social"><i class="fa fa-whatsapp" aria-hidden="true"></i></div></a></div>
 
           </div>
       </div>
     <section class="related-stories copy">
         <h2 style="padding-bottom: 0.5em; ">Related stories</h2>
+        <a href="http://www.hindustantimes.com/interactives/gujarat-margin-analysis/"><div class="related-story">
+          <div class = 'related-image' style='background: url("http://www.hindustantimes.com/interactives/gujarat-margin-analysis//img/social.png"); background-size: cover; height: 150px;width: 100%; background-position: 50% 50%;'></div>
+          <h3>Winning a state election in Gujarat has become harder</h3>
+        </div></a>
         <a href="http://www.hindustantimes.com/interactives/gujarat-assembly-election-results-history/"><div class="related-story">
           <div class = 'related-image' style='background: url("http://www.hindustantimes.com/rf/image_size_300x169/HT/p2/2017/10/25/Pictures/_09e01e50-b950-11e7-8fe3-8a4365deb777.jpg"); background-size: cover; height: 150px;width: 100%; background-position: 50% 50%;'></div>
           <h3>For 22 years, Gujarat has been a BJP stronghold. But it wasn’t always this way.</h3>
         </div></a>
-        <a href="http://www.hindustantimes.com/interactives/elections-2017-islands-of-women/"><div class="related-story">
-          <div class = 'related-image' style='background: url("http://www.hindustantimes.com/interactives/elections-2017-islands-of-women/img/social.jpg"); background-size: cover; height: 150px;width: 100%; background-position: 50% 50%;'></div>
-          <h3>Islands of women: Few women contest assembly polls and even fewer win</h3>
-        </div></a>
-        <a href="http://www.hindustantimes.com/interactives/election-candidates-2017/"><div class="related-story">
-          <div class = 'related-image' style='background: url("http://www.hindustantimes.com/interactives/election-assets/img/HP-share-image.png"); background-size: cover; height: 150px;width: 100%; background-position: 50% 50%;'></div>
+        <a href="http://www.hindustantimes.com/interactives/election-candidates-2017/gujarat/"><div class="related-story">
+          <div class = 'related-image' style='background: url("http://www.hindustantimes.com/interactives/election-assets/img/GJ-share-image.png"); background-size: cover; height: 150px;width: 100%; background-position: 50% 50%;'></div>
           <h3>Know who is contesting from your constituency</h3>
         </div></a>
         <a href="http://www.hindustantimes.com/interactives"><div class="related-story">
