--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=Edge;chrome=1">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta name="viewport" content="width=device-width">
-    <title>Four charts that show the variation in how constituencies vote in Gujarat | Hindustan Times</title>
+    <title>Four charts that show how constituencies vote in Gujarat | Hindustan Times</title>
     <!-- google fonts -->
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700|PT+Serif:400,400i,700" rel="stylesheet">
     <!-- stylesheets -->
@@ -18,7 +18,7 @@
     <!-- facebook -->
     <meta property="og:site_name" content="Hindustan Times" />
     <meta property="og:type" content="article" />
-    <meta property="og:title" content="Four charts that show the variation in how constituencies vote in Gujarat" />
+    <meta property="og:title" content="Four charts that show how constituencies vote in Gujarat" />
     <meta property="og:url" content="http://www.hindustantimes.com/interactives/gujarat-elections-2017-anti-incumbency-bellwether-analysis/" />
     <meta property="og:image" content="http://www.hindustantimes.com/interactives/gujarat-elections-2017-anti-incumbency-bellwether-analysis//img/social.jpg" />
     <meta property="og:description" content="Five seats near Surat have chosen a candidate from the ruling government." />
@@ -28,7 +28,7 @@
     <!-- twitter -->
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@htTweets" />
-    <meta name="twitter:title" content="Four charts that show the variation in how constituencies vote in Gujarat" />
+    <meta name="twitter:title" content="Four charts that show how constituencies vote in Gujarat" />
     <meta name="twitter:description" content="Five seats near Surat have chosen a candidate from the ruling government." />
     <meta name="twitter:image:src" content="http://www.hindustantimes.com/interactives/gujarat-elections-2017-anti-incumbency-bellwether-analysis//img/social.jpg" />
     <!-- Google Tag Manager -->
@@ -51,13 +51,13 @@
         <a href="http://www.hindustantimes.com"><img class="nav-logo desktop" src="http://www.hindustantimes.com/static/common/logos/logo-desktop.png"></a>
         <div class="right-container">
         <a href="https://www.facebook.com/sharer/sharer.php?u=http://www.hindustantimes.com/interactives/gujarat-elections-2017-anti-incumbency-bellwether-analysis/" target="_blank"><i class="fa fa-facebook social-button" aria-hidden="true"></i></a>
-        <a href="http://twitter.com/intent/tweet?url=http://www.hindustantimes.com/interactives/gujarat-elections-2017-anti-incumbency-bellwether-analysis/&amp;text=Four charts that show the variation in how constituencies vote in Gujarat&amp;via=httweets" target="_blank"><i class="fa fa-twitter social-button" aria-hidden="true"></i></a>
+        <a href="http://twitter.com/intent/tweet?url=http://www.hindustantimes.com/interactives/gujarat-elections-2017-anti-incumbency-bellwether-analysis/&amp;text=Four charts that show how constituencies vote in Gujarat&amp;via=httweets" target="_blank"><i class="fa fa-twitter social-button" aria-hidden="true"></i></a>
         </div>
     </div>
     <div class = "story">
       <div class="headline-container">
         <h1 class="headline">
-             Four charts that show the variation in how constituencies vote in Gujarat
+             Four charts that show how constituencies vote in Gujarat
         </h1>
 
         <h3 class = "byline">
@@ -159,7 +159,7 @@
           </section>
 
 
-<div class="social-shares"><a href="https://www.facebook.com/sharer/sharer.php?u=http://www.hindustantimes.com/interactives/gujarat-elections-2017-anti-incumbency-bellwether-analysis/" target="_blank"><div class="facebook social"><i class="fa fa-facebook" aria-hidden="true"></i><span>share</span></div></a><a href="http://twitter.com/intent/tweet?url=http://www.hindustantimes.com/interactives/gujarat-elections-2017-anti-incumbency-bellwether-analysis/&amp;text=Four charts that show the variation in how constituencies vote in Gujarat&amp;via=httweets" target="_blank"><div class="twitter social"><i class="fa fa-twitter" aria-hidden="true"></i><span>tweet</span></div></a><a href="whatsapp://send?text=Four charts that show the variation in how constituencies vote in Gujarat http://www.hindustantimes.com/interactives/gujarat-elections-2017-anti-incumbency-bellwether-analysis/" data-action="share/whatsapp/share"><div class="whatsapp social"><i class="fa fa-whatsapp" aria-hidden="true"></i></div></a></div>
+<div class="social-shares"><a href="https://www.facebook.com/sharer/sharer.php?u=http://www.hindustantimes.com/interactives/gujarat-elections-2017-anti-incumbency-bellwether-analysis/" target="_blank"><div class="facebook social"><i class="fa fa-facebook" aria-hidden="true"></i><span>share</span></div></a><a href="http://twitter.com/intent/tweet?url=http://www.hindustantimes.com/interactives/gujarat-elections-2017-anti-incumbency-bellwether-analysis/&amp;text=Four charts that show how constituencies vote in Gujarat&amp;via=httweets" target="_blank"><div class="twitter social"><i class="fa fa-twitter" aria-hidden="true"></i><span>tweet</span></div></a><a href="whatsapp://send?text=Four charts that show how constituencies vote in Gujarat http://www.hindustantimes.com/interactives/gujarat-elections-2017-anti-incumbency-bellwether-analysis/" data-action="share/whatsapp/share"><div class="whatsapp social"><i class="fa fa-whatsapp" aria-hidden="true"></i></div></a></div>
 
           </div>
       </div>
