--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" type="text/css" href="//maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" type="text/css" href="css/styles.css?v3">
     <meta name="keywords" content="Bellwether seats in gujarat, anti-incumbency in gujarat, Gujarat elections, BJP, BJP in Gujarat, Gujarat election results, Gujarat winning margin, Gujarat assembly elections" />
-    <meta name="description" content="Five seats near Surat have chosen a candidate from the ruling government." />
+    <meta name="description" content="Five seats near Surat have always chosen a candidate from the ruling government." />
 
     <link rel="canonical" content="http://www.hindustantimes.com/interactives/gujarat-elections-2017-anti-incumbency-bellwether-analysis/" />
 
@@ -21,7 +21,7 @@
     <meta property="og:title" content="Four charts that show how constituencies vote in Gujarat" />
     <meta property="og:url" content="http://www.hindustantimes.com/interactives/gujarat-elections-2017-anti-incumbency-bellwether-analysis/" />
     <meta property="og:image" content="http://www.hindustantimes.com/interactives/gujarat-elections-2017-anti-incumbency-bellwether-analysis//img/social.jpg" />
-    <meta property="og:description" content="Five seats near Surat have chosen a candidate from the ruling government." />
+    <meta property="og:description" content="Five seats near Surat have always chosen a candidate from the ruling government." />
     <meta property="og:image:type" content="image/jpeg" />
     <meta property="og:type" content="website" />
 
@@ -29,7 +29,7 @@
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@htTweets" />
     <meta name="twitter:title" content="Four charts that show how constituencies vote in Gujarat" />
-    <meta name="twitter:description" content="Five seats near Surat have chosen a candidate from the ruling government." />
+    <meta name="twitter:description" content="Five seats near Surat have always chosen a candidate from the ruling government." />
     <meta name="twitter:image:src" content="http://www.hindustantimes.com/interactives/gujarat-elections-2017-anti-incumbency-bellwether-analysis//img/social.jpg" />
     <!-- Google Tag Manager -->
     <script>dataLayer=[{"section":"interactives"}];</script>
@@ -73,7 +73,7 @@
       <div class = 'copy-container'>
 
           <section class="copy">
-            <p>As the Surat neighbourhood goes, so goes Gujarat. A Hindustan Times analysis of electoral data shows that from 1962 to 2012, fives constituencies around Surat voted for the party that won the election.</p>
+            <p>As the Surat neighbourhood goes, so goes Gujarat. A Hindustan Times analysis of electoral data shows that from 1962 to 2012, five constituencies around Surat voted for the party that won the election.</p>
 <div class="locator">
 <h2 class="chart-title">Politics of Surat mirror that of Gujarat</h2>
 <p class="chart-subhed">Five seats near Surat have elected a candidate from the ruling Government since 1962</p>
